revisao de erros

--- a/WebContent/cadastro/cadAtendente.xhtml
+++ b/WebContent/cadastro/cadAtendente.xhtml
@@ -127,6 +127,7 @@
 											value="Atendente:*" />
 
 										<p:inputText id="nome" required="true" maxlength="150"
+											autocomplete="true"
 											value="#{atendenteBean.atendenteModel.pessoa.pessoaNome}"
 											requiredMessage="Informe o Nome do Estoquista" />
 									</div>
