--- a/WebContent/cadastro/cadEstoquista.xhtml
+++ b/WebContent/cadastro/cadEstoquista.xhtml
@@ -141,6 +141,7 @@
 											value="Estoquista: *" />
 
 										<p:inputText id="nome" required="true" maxlength="150"
+											autocomplete="true"
 											value="#{estoquistaBean.estoquistaModel.pessoa.pessoaNome}"
 											requiredMessage="Informe o Nome do Estoquista" />
 									</div>
