--- a/WebContent/cadastro/findMedico.xhtml
+++ b/WebContent/cadastro/findMedico.xhtml
@@ -17,18 +17,19 @@
 }
 
 .ui-selectoneradio label {
-    cursor: pointer;
-    display: inline-block;
-    margin: 0 16px 0 8px;
-    vertical-align: middle;
-    /*color: #2e6e9e !important;*/
-    font-size: medium;
+	cursor: pointer;
+	display: inline-block;
+	margin: 0 16px 0 8px;
+	vertical-align: middle;
+	/*color: #2e6e9e !important;*/
+	font-size: medium;
 }
 
-.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
-    border: 1px solid #c5dbec;
-    font-weight: bold;
-    color: black;
+.ui-state-default, .ui-widget-content .ui-state-default,
+	.ui-widget-header .ui-state-default {
+	border: 1px solid #c5dbec;
+	font-weight: bold;
+	color: black;
 }
 
 .ui-fluid .ui-inputmask {
@@ -100,7 +101,8 @@
 										background-color: greenyellow; 
 										color:white !important;
 										font-size:large; "
-										action="#{medicoBean.novo}" rendered="true" immediate="true" />
+										action="#{medicoBean.novo}" rendered="true" immediate="true"
+										icon="fa fa-plus" iconPos="right" />
 								</div>
 								<div class="ui-g-12 ui-lg-1">
 									<p:commandButton id="botaoEditar" value="Editar"
@@ -110,7 +112,8 @@
 										   font-size:large;"
 										immediate="true" action="#{medicoBean.editar}"
 										update="table, @form"
-										rendered="#{medicoBean.medicoModel.idMedico > 0 }">
+										rendered="#{medicoBean.medicoModel.idMedico > 0 }"
+										icon=" fa fa-pencil" iconPos="right">
 
 										<f:setPropertyActionListener value="#{d}"
 											target="#{medicoBean.medicoModel}" />
@@ -124,11 +127,12 @@
 										   font-size:large;"
 										immediate="true" action="#{medicoBean.inativar}"
 										update="table, @form"
-										rendered="#{medicoBean.medicoModel.idMedico > 0 }">
+										rendered="#{medicoBean.medicoModel.idMedico > 0 }"
+										icon="fa fa-check" iconPos="right">
 									</p:commandButton>
 								</div>
 								<div class="ui-g-12 ui-lg-3">
-									<p:selectOneRadio value="#{medicoBean.campoBuscaAtivo}"> 
+									<p:selectOneRadio value="#{medicoBean.campoBuscaAtivo}">
 										<f:selectItem itemLabel="Todos" itemValue="T" />
 										<f:selectItem itemLabel="Ativo" itemValue="A" />
 										<f:selectItem itemLabel="Inativo" itemValue="I" />
@@ -146,17 +150,14 @@
 							</div>
 
 							<div class="ui-g-12 ui-lg-2">
-								<p:inputText value="#{medicoBean.campoBuscaCPF}"
-									placeholder="Buscar pelo CPF" id="inputCPF"
-									style="height:40px; ">
-
-								</p:inputText>
-							</div>
-							<div class="ui-g-12 ui-lg-1">
-								<p:commandButton style="height:40px;" icon="ui-icon-search"
-									id="btnBuscatxt" actionListener="#{medicoBean.busca}"
-									update="table" />
-								<p:defaultCommand target="btnBuscatxt" />
+								<div class="ui-inputgroup">
+									<p:inputText value="#{medicoBean.campoBuscaCPF}"
+										placeholder="Buscar pelo CPF" id="inputCPF"
+										style="height:40px; " />
+									<p:commandButton style="height:40px;" icon="ui-icon-search"
+										id="btnBuscatxt" actionListener="#{medicoBean.busca}"
+										update="table" />
+								</div>
 							</div>
 						</div>
 					</div>
@@ -165,10 +166,10 @@
 					<div class="ui-g">
 						<div class="ui-g-12 ui-lg-12 ui-sm-12 ui-md-12">
 							<p:dataTable value="#{medicoBean.lstMedico}" var="d"
-							emptyMessage="Não há registros disponível"
-								reflow="true" styleClass="table.gridtable"
-								rowKey="#{d.idMedico}" selectionMode="single" id="table"
-								selection="#{medicoBean.medicoModel}">
+								emptyMessage="Não há registros disponível" reflow="true"
+								styleClass="table.gridtable" rowKey="#{d.idMedico}"
+								selectionMode="single" id="table"
+								selection="#{medicoBean.medicoModel}" rows="10" paginator="true">
 
 								<p:ajax event="rowSelect" listener="#{medicoBean.onRowSelect}"
 									update="table,:form:botoes" />
@@ -178,7 +179,12 @@
 									<p:outputLabel value="#{d.pessoa.pessoaNome}" />
 									<br />
 									<p:outputLabel value="CPF - #{d.pessoa.pessoaCPF}" />
-									<br/>
+								</p:column>
+
+								<p:column headerText="Mais Informações" priority="1"
+									style="overflow: hidden;text-align: left; font-size: large">
+									<p:outputLabel value="#{d.pessoa.pessoaEmail}" />
+									<br />
 									<p:outputLabel value="#{d.pessoa.pessoaTelefonePrimario}" />
 								</p:column>
 
