--- a/WebContent/cadastro/cadMedico.xhtml
+++ b/WebContent/cadastro/cadMedico.xhtml
@@ -8,7 +8,7 @@
 	xmlns:util="http://java.sun.com/jsf/composite/componentes"
 	xmlns:p="http://primefaces.org/ui" template="/WEB-INF/template.xhtml">
 
-	<ui:define name="title">Cadastro de Atendente</ui:define>
+	<ui:define name="title">Cadastro de Médico</ui:define>
 
 	<ui:define name="head">
 		<style>
@@ -91,12 +91,7 @@
 </style>
 }
 	</ui:define>
-
-
 	<ui:define name="content">
-
-
-
 		<h:form id="form">
 			<div class="ui-fluid">
 				<div class="ui-g">
@@ -122,15 +117,6 @@
 										botaoExcluir="false">
 									</util:botoesCrud>
 
-									<p:commandButton value="Limpar"
-										style="height:40px;width:130px;
-										background-color: brown; 
-										background: brown; 
-										color:white !important;
-										font-size:large; "
-										type="reset" ajax="true" immediate="true" id="buttonLimpar"
-										icon="fa fa-eraser" iconPos="right">
-									</p:commandButton>
 								</div>
 
 								<br />
@@ -145,7 +131,8 @@
 										<h:outputLabel id="labelNomeEstoquista" for="nome"
 											value="Médico:*" />
 
-										<p:inputText id="nome" required="false" maxlength="150"
+										<p:inputText id="nome" required="true" maxlength="150"
+											autocomplete="true"
 											value="#{medicoBean.medicoModel.pessoa.pessoaNome}"
 											requiredMessage="Informe o Nome do Estoquista" />
 									</div>
@@ -153,7 +140,7 @@
 										<h:outputLabel id="labelDataNascimentoEstoquista"
 											for="nascimento" value="Nascimento:*" />
 
-										<p:calendar id="nascimento" required="false" maxlength="10"
+										<p:calendar id="nascimento" required="true" maxlength="10"
 											pattern="dd/MM/yyyy" mask="true" navigator="true"
 											maxdate="today" mindate="01/01/1930" pagedate="1/1/80"
 											value="#{medicoBean.medicoModel.pessoa.pessoaDataNascimento}"
@@ -165,7 +152,7 @@
 
 										<p:selectOneMenu id="sexo"
 											value="#{medicoBean.medicoModel.pessoa.pessoaSexo}"
-											required="false" requiredMessage="Selecione um Gênero"
+											required="true" requiredMessage="Selecione um Gênero"
 											style="width:100%; padding:center;">
 											<f:selectItem itemLabel=" Masculino" itemValue="M" />
 											<f:selectItem itemLabel=" Feminino" itemValue="F" />
@@ -175,7 +162,7 @@
 										<h:outputLabel id="labelEmailEstoquista" for="email"
 											value="Email: *" />
 
-										<p:inputText id="email" required="false" maxlength="100"
+										<p:inputText id="email" required="true" maxlength="100"
 											value="#{medicoBean.medicoModel.pessoa.pessoaEmail}"
 											requiredMessage="Informe o Email" />
 									</div>
@@ -183,7 +170,7 @@
 										<h:outputLabel id="labelRgEstoquista" for="rg" value="RG: *" />
 										<p:inputMask id="rg"
 											value="#{medicoBean.medicoModel.pessoa.pessoaRG}"
-											mask="99.999.999-9" required="false"
+											mask="99.999.999-9" required="true"
 											requiredMessage="Informe o RG" />
 									</div>
 									<div class="ui-g-12 ui-lg-2">
@@ -191,7 +178,7 @@
 											value="CPF: *" />
 										<p:inputMask id="cpf"
 											value="#{medicoBean.medicoModel.pessoa.pessoaCPF}"
-											mask="999.999.999-99" required="false"
+											mask="999.999.999-99" required="true"
 											requiredMessage="Informe o Cpf" />
 									</div>
 									<div class="ui-g-12 ui-lg-2 ">
@@ -199,7 +186,7 @@
 											for="telefonePrimario" value="Celular:*" />
 										<p:inputMask id="telefonePrimario"
 											value="#{medicoBean.medicoModel.pessoa.pessoaTelefonePrimario}"
-											mask="(999)9999-9999" required="false"
+											mask="(999)9999-9999" required="true"
 											requiredMessage="Informe o Telefone de Contato" />
 
 									</div>
@@ -210,14 +197,15 @@
 											value="#{medicoBean.medicoModel.pessoa.pessoaTelefoneSecundario}"
 											mask="(999)9 9999-9999" maxlength="12" />
 									</div>
-									<div class="ui-g-12 ui-lg-4">
-										<h:outputLabel id="labelObservacaoEstoquista" for="obs"
-											value="Observação:" />
-										<p:inputTextarea id="obs" rows="1" cols="30" maxlength="315"
-											autoResize="true"
-											value="#{medicoBean.medicoModel.pessoa.pessoaObservacao}" />
+									
+									<div class="ui-g-12 ui-lg-2">
+										<h:outputLabel 
+											value="Valor da Consulta:*" />
+										<p:inputNumber required="true" requiredMessage="Valor da Consulta" emptyValue="0" decimalPlaces="2" 
+											value="#{medicoBean.medicoModel.valorConsulta}"  symbol="R$" />
 									</div>
-									<div class="ui-g-12 ui-lg-10">
+									
+									<div class="ui-g-12 ui-lg-6">
 										<h:outputLabel 
 											value="Especialidade:" />
 										<p:autoComplete id="esp"
@@ -228,16 +216,15 @@
 											value="#{medicoBean.medicoModel.especialidades}" minQueryLength="1"
 											dropdown="true" maxResults="30" required="true"
 											requiredMessage="Informe uma Especialidade">
-											<p:column id="p">
-												<h:outputText value="#{a.nomeEspecialidade}" />
-											</p:column>
+
 										</p:autoComplete>
 									</div>
-									<div class="ui-g-12 ui-lg-2">
-										<h:outputLabel 
-											value="Valor da Consulta:*" />
-										<p:inputNumber required="true" requiredMessage="Valor da Consulta" emptyValue="0" decimalPlaces="2" 
-											value="#{medicoBean.medicoModel.valorConsulta}" />
+									<div class="ui-g-12 ui-lg-6">
+										<h:outputLabel id="labelObservacaoEstoquista" for="obs"
+											value="Observação:" />
+										<p:inputTextarea id="obs" rows="1" cols="30" maxlength="315"
+											autoResize="true"
+											value="#{medicoBean.medicoModel.pessoa.pessoaObservacao}" />
 									</div>
 								</div>
 								<p:separator />
@@ -249,9 +236,8 @@
 										<p:inputText id="campoCep" autocomplete="true"
 											value="#{medicoBean.medicoModel.pessoa.cep}"
 											title="O endereço será pesquisado na base de dados do correio ao sair do campo cep"
-											required="false" requiredMessage="Informe o Cep Válido"
+											required="true" requiredMessage="Informe o Cep Válido"
 											maxlength="8">
-
 											<p:ajax event="blur" execute="@this"
 												listener="#{medicoBean.pesquisarCep}"
 												update="logradouro,bairro,uf,complemento,localidade" />
@@ -265,12 +251,13 @@
 										<p:inputText id="localidade"
 											ondblclick="javascript:this.value=''"
 											value="#{medicoBean.medicoModel.pessoa.localidade}"
-											required="false" requiredMessage="Informe a Cidade">
+											required="true" requiredMessage="Informe a Cidade">
 										</p:inputText>
 									</div>
 									<div class="ui-g-12 ui-lg-1">
 										<h:outputLabel id="labelUf" value="UF:*" />
 										<p:inputText id="uf" ondblclick="javascript:this.value=''"
+											required="true" requiredMessage="Informe uma UF"
 											value="#{medicoBean.medicoModel.pessoa.uf}">
 										</p:inputText>
 									</div>
@@ -287,14 +274,14 @@
 										<h:outputLabel id="labelLogradouro" value="Endereço:*" />
 										<p:inputText id="logradouro"
 											value="#{medicoBean.medicoModel.pessoa.logradouro}"
-											ondblclick="javascript:this.value=''" required="false"
+											ondblclick="javascript:this.value=''" required="true"
 											requiredMessage="Informe o Endereço" />
 									</div>
 									<div class="ui-g-12 ui-lg-6">
 										<h:outputLabel id="labelBairro" value="Bairro:*" />
 										<p:inputText ondblclick="javascript:this.value=''"
 											value="#{medicoBean.medicoModel.pessoa.bairro}" id="bairro"
-											required="false" requiredMessage="Informe o Bairro">
+											required="true" requiredMessage="Informe o Bairro">
 										</p:inputText>
 									</div>
 								</div>
