--- a/WebContent/cadastro/findConvenio.xhtml
+++ b/WebContent/cadastro/findConvenio.xhtml
@@ -25,10 +25,12 @@
 }
 
 .ui-fluid .ui-inputtext {
-	width: 100%;
-	height: 35px;
-	font-size: large;
-	color: black;
+    width: 100%;
+    height: 35px;
+    font-size: large;
+    font-weight: bold;
+    text-align: center;
+    color: black;
 }
 
 .ui-fluid .ui-inputtextarea {
@@ -78,7 +80,7 @@
 					<div class="ui-g">
 						<div class="ui-g-12">
 							<h:panelGroup id="botoes">
-								<div class="ui-g-12 ui-lg-2">
+								<div class="ui-g-12 ui-lg-1">
 									<p:commandButton value="Incluir"
 										style="height:40px; background: greenyellow !important  ;   
 										background-color: greenyellow; 
@@ -87,7 +89,7 @@
 										action="#{convenioBean.novo}" rendered="true" immediate="true"
 										icon="fa fa-plus" iconPos="right" />
 								</div>
-								<div class="ui-g-12 ui-lg-2">
+								<div class="ui-g-12 ui-lg-1">
 									<p:commandButton id="botaoEditar" value="Editar"
 										style="height:40px; background: lightskyblue !important  ;
 										   background-color: lightskyblue ;
@@ -103,19 +105,16 @@
 									</p:commandButton>
 								</div>
 							</h:panelGroup>
-							<div class="ui-g-12 ui-lg-4">
-								<p:inputText value="#{convenioBean.campoBuscaNome}"
-									placeholder="Buscar pelo Nome" id="inputNome"
-									style="height:40px; ">
-
-								</p:inputText>
-							</div>
-							<div class="ui-g-12 ui-lg-1">
-								<p:commandButton style="height:40px;width:130px; "
-									styleClass="btn btn-blue" icon="ui-icon-search"
-									id="btnBuscatxt" actionListener="#{convenioBean.busca}"
-									update=" inputNome,table" />
-								<p:defaultCommand target="btnBuscatxt" />
+							<div class="ui-g-12 ui-lg-3">
+								<div class="ui-inputgroup">
+									<p:inputText value="#{convenioBean.campoBuscaNome}"
+										placeholder="Buscar pelo Nome" id="inputNome"
+										style="height:40px; " />
+									<p:commandButton 
+										icon="ui-icon-search" id="btnBuscatxt"
+										actionListener="#{convenioBean.busca}"
+										update=" inputNome,table" />
+								</div>
 							</div>
 						</div>
 					</div>
@@ -124,40 +123,29 @@
 					<div class="ui-g">
 						<br />
 						<p:dataTable value="#{convenioBean.lstConvenio}" var="d"
-							emptyMessage="Não há dados"
-							styleClass="table.gridtable" rowKey="#{d.idConvenio}"
-							selectionMode="single" id="table" rows="10" paginator="true"
+							emptyMessage="Não há dados" 
+							rowKey="#{d.idConvenio}" selectionMode="single" id="table"
+							rows="10" paginator="true"
 							selection="#{convenioBean.convenioModel}">
 
 							<p:ajax event="rowSelect" listener="#{convenioBean.onRowSelect}"
 								update="table,:form:botoes" />
 
 							<p:column headerText="Convênio" priority="1"
-								style="overflow: hidden;text-align: left; font-size: medium">
-								<p:outputLabel value="#{d.nomeConvenio}" /> 
+								style="overflow: hidden;text-align: left; font-size: large">
+								<p:outputLabel value="#{d.nomeConvenio}" />
+								<br />
+								<p:outputLabel value="#{d.telefone}" />
 							</p:column>
 
 							<p:column headerText="Endereço" priority="5"
-								style="overflow: hidden;text-align: left; font-size: medium">
-								<p:outputLabel value="#{d.logradouro}"  /> <br />
+								style="overflow: hidden;text-align: left; font-size: large">
+								<p:outputLabel value="#{d.logradouro} - " />
+								<p:outputLabel value="#{d.cep}" />
+								<br />
+								<p:outputLabel value="#{d.bairro}" />
 							</p:column>
-							<p:column headerText="Telefone" priority="5"
-								style="overflow: hidden;text-align: left; font-size: medium">
-								<p:outputLabel value="#{d.telefone}" /> <br />
-							</p:column>
-
-<!-- 							<p:column style="width:50px" priority="4">
-								<center>
-									<f:facet name="header">Excluir</f:facet>
-									<p:commandLink action="#{convenioBean.excluir}" update="table"
-										id="excluir" ajax="true" immediate="true">
-										<i class="fa fa-trash" aria-hidden="true"></i>
-										<f:setPropertyActionListener value="#{d}"
-											target="#{convenioBean.convenioModel}" />
-									</p:commandLink>
-								</center>
-							</p:column>
- -->						</p:dataTable>
+						</p:dataTable>
 					</div>
 				</p:panel>
 			</div>
