--- a/WebContent/prontuario/guiaConsulta.xhtml
+++ b/WebContent/prontuario/guiaConsulta.xhtml
@@ -6,9 +6,9 @@
 	xmlns:util="http://java.sun.com/jsf/composite/componentes">
 <body>
 	<div class="ui-lg-12">
-			<p:panel>
-		<div class="ui-g">
-				<div class="ui-g-12 ui-lg-5 ui-sm-12">
+		<p:panel>
+			<div class="ui-g">
+				<div class="ui-g-12 ui-lg-6 ui-sm-12">
 					<p:tabView>
 						<p:tab title="Paciente">
 							<div class="ui-g" align="center">
@@ -17,7 +17,7 @@
 										value="#{prontuarioBean.prontuarioModel.paciente.pessoa.pessoaNome.toUpperCase()}" />
 								</div>
 							</div>
-							<br/>
+							<br />
 							<p:separator />
 							<div class="ui-g">
 								<div class="ui-g-12 ui-lg-3 ui-sm-12">
@@ -131,44 +131,9 @@
 								</div>
 							</div>
 						</p:tab>
-						<!-- <p:tab title="Histórico do Paciente na Clinica">
-						<div class="ui-g">
-							<p:panel style="border : 1; border-radius:10px">
-								<p:repeat value="#{prontuarioBean.lstDadosPaciente}" var="d">
-									<div class="ui-g-12 ui-lg-12 ">
-										<p:outputLabel value="Data da Consulta: "
-											style="font-weight: bold" />
-										<p:outputLabel value="#{d.dataConsulta}">
-											<f:convertDateTime pattern="dd/MM/yyyy"
-												timeZone="America_Sao_Paulo" locale="pt_BR" />
-										</p:outputLabel>
-									</div>
-									<br />
-									<div class="ui-g-12 ui-lg-12 ">
-										<p:outputLabel value="Motivo da Consulta: "
-											style="font-weight: bold" />
-										<br />
-										<p:outputLabel value="#{d.problemaPaciente}" />
-									</div>
-									<div class="ui-g-12 ui-lg-12 ">
-										<p:outputLabel value="Diagnóstico:" style="font-weight: bold" />
-										<br />
-										<p:outputLabel value="#{d.diagnostico}" />
-									</div>
-									<div class="ui-g-12 ui-lg-12 ">
-										<p:outputLabel value="Prescricão Médica:"
-											style="font-weight: bold" />
-										<br />
-										<p:outputLabel value="#{d.prescricao}" />
-									</div>
-								</p:repeat>
-							</p:panel>
-						</div>
-
-					</p:tab> -->
 					</p:tabView>
 				</div>
-				<div class="ui-g-12 ui-lg-7 ui-sm-12 ui-md-12">
+				<div class="ui-g-12 ui-lg-6 ui-sm-12 ui-md-12">
 					<p:tabView>
 						<p:tab title="Motivo da Consulta">
 							<div class="ui-g">
@@ -198,10 +163,9 @@
 						</p:tab>
 						<p:tab title="Medicamento">
 							<div class="ui-g">
-								<div class="ui-g-12 ui-lg-12">
+								<div class="ui-g-12 ui-lg-10">
 									<p:outputLabel
 										value="Qual o medicamento/exame quer irá receitar ao Paciente?" />
-									<br />
 									<p:autoComplete id="medicamento"
 										completeMethod="#{auxController.completeMedicamento}"
 										forceSelection="true" converter="entityConverter" var="a"
@@ -215,37 +179,28 @@
 										</p:column>
 									</p:autoComplete>
 								</div>
-								<div class="ui-g-12 ui-lg-12">
-									<p:outputLabel value="Qual a Posologia?" />
-									<br />
-									<p:inputTextarea title="Posologia" autoResize="true" rows="4"
-										cols="40" maxlength="2000"
+								<div class="ui-g-12 ui-lg-1">
+									<p:outputLabel value="Posologia" />
+									<p:selectOneMenu title="Posologia"
 										value="#{prontuarioBean.prontuarioModel.posologia}"
-										required="true" requiredMessage="Informe uma posologia" />
+										required="true" requiredMessage="Informe uma posologia">
+										<f:selectItem itemLabel="6/6h" itemValue="8" />
+										<f:selectItem itemLabel="8/8h" itemValue="8" />
+										<f:selectItem itemLabel="12/12h" itemValue="12" />
+										<f:selectItem itemLabel="1 vez ao dia" itemValue="1" />
+
+									</p:selectOneMenu>
 								</div>
 							</div>
 
-							<div class="ui-g">
-								<div class="ui-g-12 ui-lg-12">
-									<p:outputLabel
-										value="Qual o medicamento/exame quer irá receitar ao Paciente?" />
-									<br />
-									<p:inputTextarea title="Receita" autoResize="true" rows="3"
-										cols="50" maxlength="2000"
-										value="#{prontuarioBean.prontuarioModel.prescricao}"
-										required="true" requiredMessage="Informe uma prescrição" />
-								</div>
-							</div>
 							<!-- Botão Salvar -->
 							<div class="ui-g" align="center">
 								<div class="ui-g-12 ui-lg-12">
-									<p:commandButton value="Salvar"
+									<p:commandButton value="Salvars"
 										style="height:40px;width:130px; background-color: green; background: green; color:white !important"
 										rendered="#{prontuarioBean.estado eq 'C'}"
-										actionListener="#{prontuarioBean.saveNotReturn}" ajax="true"
-										partialSubmit="true" process="@this, @form" id="buttonSalvar"
-										immediate="false" update="@form" icon="fa fa-floppy-o fa"
-										iconPos="rigth">
+										actionListener="#{prontuarioBean.saveNotReturn}"
+										id="buttonSalvar" immediate="false" iconPos="rigth">
 									</p:commandButton>
 
 									<util:botoesCrud managedBeanView="#{prontuarioBean}"
@@ -283,8 +238,8 @@
 						</h:outputText>
 					</div>
 				</div>
-		</div>
-			</p:panel>
+			</div>
+		</p:panel>
 	</div>
 
 </body>
