--- a/WebContent/prontuario/historico.xhtml
+++ b/WebContent/prontuario/historico.xhtml
@@ -7,12 +7,11 @@
 <body>
 	<div class="content">
 		<p:panel>
-			<div align="center">
+			<!-- <div align="center">
 				<p:outputLabel value="Histórico de Paciente" styleClass="titulo" />
 			</div>
 			<br />
-			<br />
-
+			<br /> -->
 			<div class="ui-g">
 				<div class="ui-g-12" style="text-align: center;">
 					<p:inputText size="45" value="#{prontuarioBean.campoBusca}"
