ajustes cadastrso , padronizacao

--- a/WebContent/cadastro/cadMaterial.xhtml
+++ b/WebContent/cadastro/cadMaterial.xhtml
@@ -140,7 +140,7 @@
 
 										<h:outputLabel value="Material:*" />
 
-										<p:inputText required="true" maxlength="150"
+										<p:inputText required="true" maxlength="150" autocomplete="true"
 											value="#{materialBean.materialModel.nomeMaterial}"
 											requiredMessage="Informe o Nome do Convenio" />
 									</div>
