--- a/WebContent/cadastro/findEspecialidade.xhtml
+++ b/WebContent/cadastro/findEspecialidade.xhtml
@@ -136,7 +136,7 @@
 										value="#{especialidadeBean.campoBuscaEspecialidade}"
 										placeholder="Buscar pela Especialidade" id="inputNome"
 										style="height:40px; " />
-									<p:commandButton style="height:40px;width:130px; "
+									<p:commandButton 
 										styleClass="btn btn-blue" icon="ui-icon-search"
 										id="btnBuscatxt" actionListener="#{especialidadeBean.busca}"
 										update=" inputNome,table" />
